connector returns now non mutable lists